Added "website" to the footer wording

--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
         </a>
      </div>
      <p class="coded-by-footer">
-        This was coded by Brooke Clarke and is <a href="https://github.com/BrookeClarke/Portfolio-Project">open sourced.</a>
+        This website was coded by Brooke Clarke and is <a href="https://github.com/BrookeClarke/Portfolio-Project">open sourced.</a>
      </p>
 </footer>
 </body>
