--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="index">
         <h1>Brooke Clarke</h1>
         <h2 class="title-description mb-5">Junior Front-end developer, based in England.</h2>
-        <p class="mini-description-topper">I am a junior front-end developer based in Kent, I have been coding for 10 months.</p>
+        <p class="mini-description-topper">I am a junior front-end developer based in Kent, I have been coding for 1 year.</p>
         <a class="contact-me-button btn mb-5" href="contact.html">Contact Me</a>
     </div>
     <div class="container">
