Changed the writing for the project descriptions

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="col-6">
                <div class="project-description">
                <h2 class="project-h2">My Fitness Project</h2>
-               <p class="project-p">Here is my fitness project! For this project I wanted something a bit more simple. This is also the first ever project that I've ever done!</p>
+               <p class="project-p">Here is my fitness project! For this project I wanted something a bit more simple with a slight pop of colour. </p>
                <a class="launch-project-button" href="">Launch project</a>
            </div>
        </div>
@@ -64,7 +64,7 @@
        <div class="col-6">
           <div class="project-description">
            <h2 class="project-h2">My Hobby Project</h2>
-           <p class="project-p">Here is my hobby project! For this project I wanted a wavy pattern in the background to resemble the waves in the sea. It was a nice challenge to try to balance out the content of the page with the busy background. My favourite hobby that I do is kayaking, I find it to be so peaceful!</p>
+           <p class="project-p">Here is my hobby project! For this project I wanted a wavy pattern in the background to resemble the waves in the sea. It was a nice challenge to try to balance out the content of the page with the busy background. </p>
            <a class="launch-project-button" href="">Launch project</a>
       </div>
    </div>
@@ -79,7 +79,7 @@
        <div class="col-6">
           <div class="project-description">
           <h2 class="project-h2">My Weather App Project</h2>
-          <p class="project-p">Here is my weather app project! I love how all of the colours look together! For this project I wanted something a bit more colourful, I chose blues and yellows to resemble rain and sun. This was the first ever project that I have done that included a lot of javascript and taught me a lot about JavaScript as well.</p>
+          <p class="project-p">Here is my weather app project! For this project I wanted something a bit more colourful, I chose blues and yellows to resemble rain and sun. This was the first ever project that I have done that included a lot of javascript and taught me a lot about JavaScript as well.</p>
           <a class="launch-project-button" href="">Launch project</a>
           </div>
        </div>
@@ -87,7 +87,7 @@
            <div class="col-6">
               <div class="project-description">
                <h2 class="project-h2">My World Clock Project</h2>
-               <p class="project-p">Here is my world clock project! For this project I wanted a really busy background just full of clocks in an attempt to show that websites/pages can still look nice with busy backgrounds and don't always have to be plain.</p>
+               <p class="project-p">Here is my world clock project! For this project I wanted a really busy background just full of clocks in an attempt to show that websites can still be unique and eyecatching with busy backgrounds and don't always have to be plain.</p>
                <a class="launch-project-button" href="">Launch project</a>
           </div>
        </div>
